# NCTF2024

./: README.md
Misc/X1crypsc/: Dockerfile  exp.sage  mt.sobj  task.py
Misc/x1guessgame/: Dockerfile  docker-entrypoint.sh
Misc/x1guessgame/app/: app.py  chal.sol  deploy.py  requirements.txt
Misc/x1guessgame/app/contracts/: Challenge.abi
Misc/x1guessgame/app/templates/: index.html
Misc/x1sshx/: challenge.pcapng  decode_message.py  decrypt.py  flag.txt  parse_redis.py  readme.md  recover_key.py  sshx_pb2.py
Misc/谁动了我的MC？/: attachment.txt
Reverse/gogo/src/: bytecode.go  dis.go
Web/H2Revenge/: Dockerfile  README.md
Web/H2Revenge/files/: docker-entrypoint.sh
Web/internal_api/: .dockerignore  Dockerfile  README.md  compose.yml
Web/internal_api/internal_api/: .env  Cargo.toml  comments.json
Web/internal_api/internal_api/public/: index.html
Web/internal_api/internal_api/src/: bot.rs  db.rs  lib.rs  main.rs  model.rs  route.rs
Web/sqlmap-master/: Dockerfile  README.md  compose.yml
Web/sqlmap-master/src/: index.html  main.py
Writeup/: Web.md
